[package]
name = "rep-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad Rosid <alahmadrosid@gmail.com>"]
description = "Replace text file in bulk"
readme = "README.md"
repository = "https://github.com/ahmadrosid/rep-cli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity"]

[dependencies]
ignore = "0.4.18"
structopt = "0.3.26"

[[bin]]
name = "rep"
path = "src/main.rs"
